# series-factory

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: cli.rs  display.rs  lib.rs  main.rs  types.rs
src/aggregation/: mod.rs
src/cache/: mod.rs
src/output/: mod.rs
src/sources/: binance.rs  bitget.rs  bybit.rs  kucoin.rs  mexc.rs  mod.rs  okx.rs  synthetic.rs
tests/: integration.rs
