[package]
name = "series-factory"
version = "0.1.0"
edition = "2021"

[lib]
name = "series_factory"
path = "src/lib.rs"

[[bin]]
name = "series-factory"
path = "src/main.rs"

[dependencies]
# Core async runtime (still needed for main structure)
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "fs", "sync"] }
# Parallel processing
rayon = "1.10"
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# HTTP client - synchronous, simple
ureq = "2.10"
# Serialization
serde = { version = "1.0", features = ["derive"] }
# CSV parsing
csv = "1.3"
# Parquet support
arrow = "54.0"
parquet = "54.0"
# ZIP compression for Binance data
zip = "2.2"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Progress bars
indicatif = "0.17"
# Random number generation for synthetic data
rand = "0.8"
rand_distr = "0.4"
# Regex for parsing generative parameters
regex = "1.11"
# LRU cache
lru = "0.12"
# CPU core detection
num_cpus = "1.16"
# Async traits (needed for dyn compatibility)
async-trait = "0.1"
# Error handling (simplified usage)
anyhow = "1.0"
# Hash for cache keys
sha2 = "0.10"
# Futures for async operations
futures = "0.3"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
lto = "thin"  # Use thin LTO for faster builds
codegen-units = 16  # Allow parallel compilation
opt-level = 3
debug = false
incremental = true  # Enable incremental compilation

# Fast release build for testing
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
